# forlas-crq

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SBOM.md  SECURITY.md  THIRD-PARTY-NOTICES.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: alembic.ini  forlas-backend.spec  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260702_1348_6f17c7062a65_baseline_schema.py  20260711_1400_b1a2c3d4e5f6_drop_benchmark_group.py  20260711_1410_c2b3d4e5f6a7_add_analysis_records.py
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  runtime.py  security.py
backend/app/api/: analysis.py  auth.py  governance.py  knowledge.py  plugins.py  portfolios.py  reports.py  scenarios.py  simulations.py  system.py
backend/app/engine/: __init__.py  distributions.py  errors.py  portfolio.py  rng.py  sensitivity.py  simulation.py  statistics.py
backend/app/jobs/: __init__.py
backend/app/knowledge/: __init__.py  seed.py
backend/app/models/: __init__.py  _base.py  analysis.py  approval.py  audit.py  knowledge.py  portfolio.py  scenario.py  session.py  settings.py  simulation.py  user.py
backend/app/plugins/: __init__.py  registry.py
backend/app/reporting/: __init__.py  currency.py  data.py  docx_report.py  html_report.py
backend/app/reporting/templates/: _base.html  report_board.html  report_executive.html
backend/app/schemas/: __init__.py  analysis.py  auth.py  common.py  portfolio.py  scenario.py  simulation.py
backend/app/services/: __init__.py  analysis.py  approvals.py  audit.py  backup.py  ids.py  import_alpha.py  portfolio.py  scenario.py  seed.py  sessions.py  simulation.py
backend/scripts/: sidecar_entry.py
backend/tests/: conftest.py  test_analysis.py  test_auth_sessions.py  test_backup.py  test_currency.py  test_engine.py  test_engine_errors.py  test_governance.py  test_knowledge.py  test_knowledge_crud.py  test_plugins.py  test_portfolio.py  test_rbac.py  test_reports.py  test_reports_remediation.py  test_simulation_api.py  test_simulation_scale.py  test_smoke.py
backend/tests/fixtures/: demo_plugin.py
docs/: CODE_REVIEW.md  DESIGN.md  PACKAGING.md  UAT.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
scripts/: build_backend_sidecar.py  health.ps1  restore-db.ps1  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+70 files in other folders)
