[project]
name = "forlas-crq"
version = "0.2.0"
description = "FORLAS CRQ — local-first quantitative cyber risk platform"
# No `readme` here on purpose: it lives at the repo root (../README.md), which
# is outside the backend Docker build context. Pointing at it breaks the image
# build. The `description` above is the packaged summary.
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Michael Walker" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "numpy>=2.1",
    "scipy>=1.14",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "jinja2>=3.1",
    "orjson>=3.10",
    "python-docx>=1.1",
    "tzdata>=2024.1",  # Alembic timezone resolution on Windows
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = [
    "E501",
    # FastAPI's `Query(...)` / `Depends(...)` in argument defaults is the
    # framework's documented pattern, not the mutable-default footgun B008
    # guards against.
    "B008",
    # `class X(str, Enum)` is kept deliberately: SQLModel/SQLite columns and
    # Pydantic serialisation rely on plain-str members; migrating to StrEnum
    # is churn without benefit here.
    "UP042",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
